--- a/chart/nodeserver/values.yaml
+++ b/chart/nodeserver/values.yaml
@@ -3,9 +3,9 @@
 replicaCount: 1
 revisionHistoryLimit: 1
 image:
-  repository: cnbailey/nodeserver
+  repository: nodeserver
   tag: 1.0.0
-  pullPolicy: Always
+  pullPolicy: IfNotPresent 
   resources:
     requests:
       cpu: 200m
