--- a/chart/nodeserver/templates/deployment.yaml
+++ b/chart/nodeserver/templates/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: "{{  .Chart.Name }}-deployment"
@@ -11,6 +11,10 @@ spec:
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
+  selector:
+    matchLabels:
+      app: "{{  .Chart.Name }}-selector"
+      version: "current"
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   template:
     metadata:
